--- a/src/pages/clientes/clientes.html
+++ b/src/pages/clientes/clientes.html
@@ -1,27 +1,71 @@
 
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>clientes</ion-title>
+  <ion-navbar color="secondary">
+    <ion-title>CLIENTES</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="fondo">
+<ion-fab top right edge >
+    <button ion-fab  (click)="gotoHome()" color="verdeFuerte">
+      <ion-icon name="home"></ion-icon>
+    </button>
+</ion-fab>
 
-<ion-card>
-  <img src="assets/img/logo.png" style="width: 10%;height: 10%;"/>
-  <ion-card-content>
-    <ion-card-title>
-      COFI CEDI
-      </ion-card-title>
-    <p>
-      The most popular industrial group ever, and largely
-      responsible for bringing the music to a mass audience.
-    </p>
-  </ion-card-content>
-</ion-card>
+<ion-list>
+<!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
+<ion-grid>
+  <ion-row>
+    <ion-col col-6>
+    
+      <ion-card (click)="gotoBusca()">
+        <img src="assets/img/lupa.png"/>     
+        <ion-card-content>     
+          <ion-card-title >Buscar Cliente</ion-card-title>
+        </ion-card-content>        
+      </ion-card>
+
+    </ion-col>
+
+    <ion-col col-6>
+      <ion-card (click)="gotoALTA()">
+        <img src="assets/img/Handshake.jpg"/>     
+        <ion-card-content>     
+          <ion-card-title>Alta   Cliente</ion-card-title>
+        </ion-card-content>        
+      </ion-card>
+    </ion-col>
+
+  </ion-row>
+
+  <ion-row >
+    <ion-col col-6>
+      <ion-card (click)="gotoActual()">
+
+     <img src="assets/img/update.jpg"/>   
+        <ion-card-content>     
+          <ion-card-title >Update Cliente</ion-card-title>
+        </ion-card-content>        
+      </ion-card>
+
+    </ion-col>
+    <ion-col col-6>
+      <ion-card (click)="gotoBaja()">
+        <img src="assets/img/delete.jpg"/>     
+        <ion-card-content>     
+          <ion-card-title >Baja Cliente</ion-card-title>
+        </ion-card-content>        
+      </ion-card>
+    </ion-col>
+
+  </ion-row>
+</ion-grid>
+
+</ion-list>
+
 
 
 </ion-content>
