--- a/src/pages/solicitudes/solborrar/solborrar.html
+++ b/src/pages/solicitudes/solborrar/solborrar.html
@@ -1,8 +1,8 @@
 
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>borrarcliente</ion-title>
+  <ion-navbar color="bankiaVerde2">
+    <ion-title>Dar de Baja Solicitud</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -20,7 +20,7 @@
   </ion-list>
 
   <div padding>
-  <button ion-button full large>Dar de BAJA</button>
+  <button ion-button full large color="second2">Dar de BAJA</button>
 </div>
 
 <ion-fab bottom right  >
