--- a/src/pages/solicitudes/solbuscar/solbuscar.html
+++ b/src/pages/solicitudes/solbuscar/solbuscar.html
@@ -1,21 +1,19 @@
 
 <ion-header>
 
-  <ion-navbar no-border-bottom  color="secondary">
-    <ion-title >Buscar Cliente por:</ion-title>
+  <ion-navbar no-border-bottom  color="bankiaVerde">
+    <ion-title >Buscar SOLICITUD por:</ion-title>
  </ion-navbar> 
- <ion-toolbar no-border-top  color="secondary">
-  	<div padding>
-	  <ion-segment [(ngModel)]="busca">
-	    <ion-segment-button value="dni">
+ <ion-toolbar no-border-top  color="bankiaVerde">
+  	<div padding  >
+	  <ion-segment [(ngModel)]="busca" >
+	    <ion-segment-button value="dni" style="color:#fff;">
 	      DNI
 	    </ion-segment-button>
-	    <ion-segment-button value="nombre">
-	      NOMBRE
+	    <ion-segment-button value="nombre" style="color:#fff;">
+	      Numero Solicitud
 	    </ion-segment-button>
-	      <ion-segment-button value="apellido">
-	      APELLIDO
-	    </ion-segment-button>
+
 	  </ion-segment>
 	</div>
  </ion-toolbar>
@@ -34,7 +32,7 @@
 
     	<ion-list *ngSwitchCase="'dni'" no-lines text-center>
       	  	<ion-list-header no-lines class="top-tittle" padding-top>
-    			<h2 class="top-tittle">BUSCAR CLIENTE POR DNI</h2>
+    			<h2 class="top-tittle">BUSCAR SOLICITUD POR DNI</h2>
   		    </ion-list-header>
 
        		<ion-item padding-bottom>		
@@ -42,39 +40,27 @@
 	    	class="texto_in"></ion-input>
 	  		</ion-item>
        		<div padding>
-	  			<button  ion-button large full>Buscar</button>
+	  			<button  ion-button large full  color="second2">Buscar</button>
 			</div>
        </ion-list>
 
 
 	    <ion-list *ngSwitchCase="'nombre'" no-lines text-center>
       	  	<ion-list-header no-lines padding-top>
-    			<h2 class="top-tittle">BUSCAR CLIENTE POR NOMBRE</h2>
+    			<h2 class="top-tittle">BUSCAR NUMERO DE SOLICITUD</h2>
   		    </ion-list-header>
 
        		<ion-item padding-bottom>		
-	    		<ion-input type="text" placeholder="Por favor ingrese el nombre"
+	    		<ion-input type="number" placeholder="Por favor ingrese el numero de solicitud"
 	    	class="texto_in"></ion-input>
 	  		</ion-item>
        		<div padding>
-	  			<button  ion-button large full>Buscar</button>
+	  			<button  ion-button large full color="second2">Buscar</button>
 			</div>
         </ion-list>
 
 
-	    <ion-list *ngSwitchCase="'apellido'" no-lines text-center>
-      	  	<ion-list-header no-lines class="top-tittle" padding-top>
-    			<h2 class="top-tittle">BUSCAR CLIENTE POR APELLIDO</h2>
-  		    </ion-list-header>
 
-       		<ion-item padding-bottom>		
-	    		<ion-input type="text" placeholder="Por favor ingrese el apellido"
-	    	class="texto_in"></ion-input>
-	  		</ion-item>
-       		<div padding>
-	  			<button  ion-button large full>Buscar</button>
-			</div>	      
-	    </ion-list>
 
     </div>
 </ion-content>
