--- a/src/pages/solicitudes/solicitudes.html
+++ b/src/pages/solicitudes/solicitudes.html
@@ -1,18 +1,68 @@
-<!--
-  Generated template for the Solicitudes page.
 
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>solicitudes</ion-title>
+  <ion-navbar color="bankiaVerde">
+    <ion-title>Solicitudes</ion-title>
   </ion-navbar>
 
 </ion-header>
 
+<ion-content padding class="fondo">
+<ion-fab top right edge >
+    <button ion-fab  (click)="gotoHome()" color="primary">
+      <ion-icon name="home"></ion-icon>
+    </button>
+</ion-fab>
+<ion-list>
+<!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
+<ion-grid>
+  <ion-row>
+    <ion-col col-6>
+    
+      <ion-card (click)="gotoBusca()" class="cards">
+        <img src="assets/img/b-search.png"/>     
+        <ion-card-content>     
+          <ion-card-title style="color:#B2C300;">Buscar Solicitud</ion-card-title>
+        </ion-card-content>        
+      </ion-card>
 
-<ion-content padding>
+    </ion-col>
+
+    <ion-col col-6>
+      <ion-card (click)="gotoALTA()"  class="cards">
+        <img src="assets/img/b-handshake.png"/>     
+        <ion-card-content>     
+          <ion-card-title style="color:#B2C300;">Alta Solicitud</ion-card-title>
+        </ion-card-content>        
+      </ion-card>
+    </ion-col>
+
+  </ion-row>
+
+  <ion-row >
+    <ion-col col-6>
+      <ion-card (click)="gotoActual()"  class="cards">
+
+     <img src="assets/img/b-edit.png"/>   
+        <ion-card-content>     
+          <ion-card-title style="color:#B2C300;">Update Solicitud</ion-card-title>
+        </ion-card-content>        
+      </ion-card>
+
+    </ion-col>
+    <ion-col col-6>
+      <ion-card (click)="gotoBaja()" class="cards">
+        <img src="assets/img/b-delete.png"/>     
+        <ion-card-content>     
+          <ion-card-title style="color:#B2C300;">Baja Solicitud</ion-card-title>
+        </ion-card-content>        
+      </ion-card>
+    </ion-col>
+
+  </ion-row>
+</ion-grid>
+
+</ion-list>
+
 
 </ion-content>
