--- a/src/pages/clientes/actuacliente/actuacliente.html
+++ b/src/pages/clientes/actuacliente/actuacliente.html
@@ -1,18 +1,101 @@
-<!--
-  Generated template for the Actuacliente page.
 
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>actuacliente</ion-title>
+    <ion-title>ACTUALIZAR CLIENTE</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+<ion-list>
+
+  <ion-item>
+    <ion-label stacked>Codigo Cliente</ion-label>
+    <ion-input type="text" value=""></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label stacked>Tipo documento</ion-label>
+    <ion-select [(ngModel)]="tipoD">
+       <ion-option name="tipo" value= "DNI">DNI</ion-option>
+       <ion-option name="tipo" value= "NIE">NIE</ion-option>
+       <ion-option name="tipo" value= "PASAPORTE">PASAPORTE</ion-option><ion-option name="tipo" value= "TARJETA RES">TARJETA RES</ion-option><ion-option name="tipo" value= "CIF">CIF</ion-option>
+    </ion-select>   
+  </ion-item>
+
+  <ion-item>
+    <ion-label stacked>Numero Documento</ion-label>
+    <ion-input type="text" value=""></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label stacked>NOMBRE</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label stacked>Apellido1</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+
+   <ion-item>
+    <ion-label stacked>Apellido2</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label stacked>Fecha Nacimiento</ion-label>
+  <ion-datetime displayFormat="MMM DD YYYY" [(ngModel)]="event.timeStarts"></ion-datetime>
+  </ion-item>
+
+  <ion-item>
+    <ion-label stacked>Sexo</ion-label>
+    <ion-select [(ngModel)]="genero">
+       <ion-option name="tipo" value= "Mujer">Mujer</ion-option>
+       <ion-option name="tipo" value= "Hombre">Hombre</ion-option>
+    </ion-select>
+  </ion-item>
+
+  <ion-item>
+    <ion-label stacked>Cod Domicilio</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+
+   <ion-item>
+    <ion-label stacked>Cod Postal</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+
+   <ion-item>
+    <ion-label stacked>Telefono</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label stacked>CCC</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+<!--
+  <ion-item>
+    <ion-label stacked>Fecha Alta</ion-label>
+<ion-datetime displayFormat="MMM DD YYYY" [(ngModel)]="fecACtual"></ion-datetime>
+  </ion-item>
+-->
+
+</ion-list>
+
+
+
+<div padding>
+  <button ion-button full large>Actualizar Datos</button>
+</div>
+
+ <ion-fab top right edge>
+    <button ion-fab  (click)="gotoHome()">
+    	<ion-icon name="home"></ion-icon>
+    </button>
+ </ion-fab>
 
 </ion-content>
