--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -28,10 +28,10 @@
 		<button ion-button full large (click)="gotoSoli()">SOLICITUDES</button>
 	</p>
   <p>
-    <button ion-button full large (click)="gotoClientes()">PRESTAMOS</button>
+    <button ion-button full large (click)="gotoPrestamos()">PRESTAMOS</button>
   </p>
   <p>
-    <button ion-button full large (click)="gotoSoli()">PRODUCTOS</button>
+    <button ion-button full large (click)="gotoPrestamos()">PRODUCTOS</button>
   </p>
 </div>
 <p text-center>Grupo 2 Mainframe@2017</p>
