--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+
   <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
