--- a/src/pages/prestamos/prestamos.html
+++ b/src/pages/prestamos/prestamos.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-navbar color="verdeFuerte">
+  <ion-navbar color="errorBlue">
     <ion-title>
-      Prestamos
+      NO DISPONIBLE
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -10,8 +10,8 @@
 
 
 <div class="card-title">
-<h1 i >NO DISPONIBLE </h1>
-<h2 ion-text >EN ESTA VERSION</h2>
+<h1  >NO DISPONIBLE </h1>
+<h2  >EN ESTA VERSION</h2>
 </div>
 <div class="card-subtitle">
 <img src="assets/img/not.jpg"/>
