--- a/src/pages/solicitudes/solborrar/solborrar.html
+++ b/src/pages/solicitudes/solborrar/solborrar.html
@@ -13,8 +13,8 @@
 <ion-list>
 
   <ion-item>
-    <ion-label stacked>Codigo Cliente</ion-label>
-    <ion-input type="text" value=""></ion-input>
+    <ion-label stacked>Numero Solicitud</ion-label>
+    <ion-input type="number" [(ngModel)]="numsoldRamdon"></ion-input>
   </ion-item>
 
   </ion-list>
